MSN-test.md/MSN Backup10032015/src/objects/Input__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Brand1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <label>Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>Input1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Input</label>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>